infra/k8s/base/services.yaml
# Application Services
apiVersion: v1
kind: Service
metadata:
  name: turboapi-auth
spec:
  selector:
    app: turboapi-auth
  ports:
    - port: 5001
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: turboapi-geo
spec:
  selector:
    app: turboapi-geo
  ports:
    - port: 5002
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: turboapi-activity
spec:
  selector:
    app: turboapi-activity
  ports:
    - port: 5003
      targetPort: 8080
